apps/goatlint/src/snapshots/fixtures__cli__tsgolint_type_error_--type-aware --type-check@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --type-aware --type-check
working directory: fixtures/cli/tsgolint_type_error
----------

  x typescript(TS2322): Type 'string' is not assignable to type 'number'.
   ,-[index.ts:1:7]
 1 | const foo: number = "42";
   :       ^^^
   `----

Found 0 warnings and 1 error.
Finished in <variable>ms on 7 files with 2 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
