apps/goatlint/src/snapshots/fixtures__cli__tsgolint_type_error_-c config-type-check-zero-rules.json@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c config-type-check-zero-rules.json
working directory: fixtures/cli/tsgolint_type_error
----------

  x typescript(TS2322): Type 'string' is not assignable to type 'number'.
   ,-[index.ts:1:7]
 1 | const foo: number = "42";
   :       ^^^
   `----

Found 0 warnings and 1 error.
Finished in <variable>ms on 7 files with 0 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
